--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,5 +1,9 @@
 @import 'compass';
 @import 'compass/reset';
+@import 'breakpoint';
+
+$break: 650px;
+$break2: 800px;
 
 * {
   @include box-sizing(border-box);
@@ -10,8 +14,15 @@
 }
 
 body {
-  font-family: "helvetica", arial, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   background: #EFEFEF;
+  -webkit-font-smoothing: antialiased;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 header {
@@ -19,8 +30,34 @@ header {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 32px;
   padding: 15px;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+p {
+  $font-size: 18px;
+  $line-height: 1.3;
+  $lines-to-show: 3;
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  font-size: $font-size;
+  font-weight: 200;
+  line-height: $line-height;
+  margin-bottom: 30px;
+
+  // @include breakpoint($break) {
+  //   height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
+  //   -webkit-line-clamp: $lines-to-show;
+  //   -webkit-box-orient: vertical;
+  //   overflow: hidden;
+  //   text-overflow: ellipsis;
+  // }
 }
 
 select {
@@ -40,11 +77,14 @@ select {
 
 .select-wrap {
   position: relative;
-  width: 50%;
+  width: 100%;
   display: inline-block;
-  margin-right: -15px;
   text-align: center;
   margin-bottom: 10px;
+
+  @include breakpoint($break2) {
+    width: 50%;
+  }
 
   &:after {
     $size: 6px;
@@ -62,41 +102,46 @@ select {
   }
 }
 
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
 img {
 }
 
 ul {
-  margin-right: -15px;
+  @include breakpoint($break) {
+    margin-right: -5px;
+  }
 }
 
 li {
   float: left;
+  width: 100%;
   position: relative;
-  width: 33.33333%;
   padding: 5px;
-  min-height: 200px;
+  min-height: 150px;
   margin-bottom: 5px;
 
-  &:first-child {
-    float: none;
-    margin-left:   auto;
-    margin-right:  auto;
+  @include breakpoint($break) {
+    width: 50%;
   }
+
+  // &:first-child {
+  //   float: none;
+  //   margin-left:   auto;
+  //   margin-right:  auto;
+  // }
 
   &:after {
     position: absolute;
     content: '';
     left: 0;
-    right: 5px;
+    right: 0;
     top: 0;
     bottom: 0;
     background: #FFF;
     z-index: -1;
+
+    @include breakpoint($break) {
+      right: 5px;
+    }
   }
   
 }
@@ -104,48 +149,42 @@ li {
 .rank {
   $color: #EFEFEF;
   $size: 3px;
-  right: 5px;
+  right: 0;
   top:    0;
   text-align: center;
   width: 28px;
-  background: $color;
+  background: red;
   padding: 5px 0;
-  color: #000;
+  color: #FFF;
+  font-weight: 700;
   position: absolute;
 
-  // &:after {
-  //   position: absolute;
-  //   left: 0;
-  //   bottom: -$size*2;
-  //   content: '';
-  //   border-top:  $size solid    darken($color, 15%);
-  //   border-right:   $size solid darken($color, 15%);
-  //   border-left:    $size solid transparent;
-  //   border-bottom:     $size solid transparent;
-  // }
-
-  // &:before {
-  //   position: absolute;
-  //   top: 0;
-  //   left: -$size*2;
-  //   // bottom: -$size*2;
-  //   content: '';
-  //   border-bottom:  $size solid    darken($color, 15%);
-  //   border-right:    $size solid darken($color, 15%);
-  //   border-left:    $size solid transparent;
-  //   border-top:     $size solid transparent;
-  // }
+  @include breakpoint($break) {
+    right: 5px;
+  }
 }
 
 .info {
-  width: 50%;
+  width: 57%;
   float: left;
+  @include breakpoint(450px) {
+    width: 65%;
+  }
+
+  @include breakpoint($break2) {
+    width: 70%;
+  }
+}
+
+.purchase {
+  position: absolute;
+  bottom: 5px;
 }
 
 .book-image {
   float: left;
-  width: 120px;
-  height: 190px;
+  width: 90px;
+  height: 140px;
   margin-right: 10px;
   background-size: cover;
   background-position: center center;
