--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,66 +19,89 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Users/jrd02/.rvm/gems/ruby-2.0.0-p247/gems/compass-0.12.3/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
-/* line 4, ../assets/sass/screen.scss */
+/* line 8, ../assets/sass/screen.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-/* line 8, ../assets/sass/screen.scss */
+/* line 12, ../assets/sass/screen.scss */
 .cf {
   clear: both; }
 
-/* line 12, ../assets/sass/screen.scss */
+/* line 16, ../assets/sass/screen.scss */
 body {
-  font-family: "helvetica", arial, sans-serif;
-  background: #EFEFEF; }
+  font-family: 'Source Sans Pro', sans-serif;
+  background: #EFEFEF;
+  -webkit-font-smoothing: antialiased; }
 
-/* line 17, ../assets/sass/screen.scss */
+/* line 22, ../assets/sass/screen.scss */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 10px; }
+
+/* line 28, ../assets/sass/screen.scss */
 header {
   text-align: center; }
 
-/* line 21, ../assets/sass/screen.scss */
+/* line 32, ../assets/sass/screen.scss */
 h1 {
-  font-size: 24px;
+  font-size: 32px;
   padding: 15px; }
 
-/* line 26, ../assets/sass/screen.scss */
+/* line 37, ../assets/sass/screen.scss */
+h2 {
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 10px; }
+
+/* line 43, ../assets/sass/screen.scss */
+p {
+  display: block;
+  /* Fallback for non-webkit */
+  display: -webkit-box;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 1.3;
+  margin-bottom: 30px; }
+
+/* line 63, ../assets/sass/screen.scss */
 select {
   width: 100%;
   display: inline-block;
@@ -93,15 +116,18 @@ select {
   -webkit-appearance: none;
   text-indent: 10px; }
 
-/* line 41, ../assets/sass/screen.scss */
+/* line 78, ../assets/sass/screen.scss */
 .select-wrap {
   position: relative;
-  width: 50%;
+  width: 100%;
   display: inline-block;
-  margin-right: -15px;
   text-align: center;
   margin-bottom: 10px; }
-  /* line 49, ../assets/sass/screen.scss */
+  @media (min-width: 800px) {
+    /* line 78, ../assets/sass/screen.scss */
+    .select-wrap {
+      width: 50%; } }
+  /* line 89, ../assets/sass/screen.scss */
   .select-wrap:after {
     position: absolute;
     top: 14px;
@@ -117,60 +143,77 @@ select {
     -o-transform: rotate(45deg);
     transform: rotate(45deg); }
 
-/* line 65, ../assets/sass/screen.scss */
-.container {
-  max-width: 960px;
-  margin: 0 auto; }
+@media (min-width: 650px) {
+  /* line 108, ../assets/sass/screen.scss */
+  ul {
+    margin-right: -5px; } }
 
-/* line 73, ../assets/sass/screen.scss */
-ul {
-  margin-right: -15px; }
-
-/* line 77, ../assets/sass/screen.scss */
+/* line 114, ../assets/sass/screen.scss */
 li {
   float: left;
+  width: 100%;
   position: relative;
-  width: 33.33333%;
   padding: 5px;
-  min-height: 200px;
+  min-height: 150px;
   margin-bottom: 5px; }
-  /* line 85, ../assets/sass/screen.scss */
-  li:first-child {
-    float: none;
-    margin-left: auto;
-    margin-right: auto; }
-  /* line 91, ../assets/sass/screen.scss */
+  @media (min-width: 650px) {
+    /* line 114, ../assets/sass/screen.scss */
+    li {
+      width: 50%; } }
+  /* line 132, ../assets/sass/screen.scss */
   li:after {
     position: absolute;
     content: '';
     left: 0;
-    right: 5px;
+    right: 0;
     top: 0;
     bottom: 0;
     background: #FFF;
     z-index: -1; }
+    @media (min-width: 650px) {
+      /* line 132, ../assets/sass/screen.scss */
+      li:after {
+        right: 5px; } }
 
-/* line 104, ../assets/sass/screen.scss */
+/* line 149, ../assets/sass/screen.scss */
 .rank {
-  right: 5px;
+  right: 0;
   top: 0;
   text-align: center;
   width: 28px;
-  background: #efefef;
+  background: red;
   padding: 5px 0;
-  color: #000;
+  color: #FFF;
+  font-weight: 700;
   position: absolute; }
+  @media (min-width: 650px) {
+    /* line 149, ../assets/sass/screen.scss */
+    .rank {
+      right: 5px; } }
 
-/* line 140, ../assets/sass/screen.scss */
+/* line 167, ../assets/sass/screen.scss */
 .info {
-  width: 50%;
+  width: 57%;
   float: left; }
+  @media (min-width: 450px) {
+    /* line 167, ../assets/sass/screen.scss */
+    .info {
+      width: 65%; } }
+  @media (min-width: 800px) {
+    /* line 167, ../assets/sass/screen.scss */
+    .info {
+      width: 70%; } }
 
-/* line 145, ../assets/sass/screen.scss */
+/* line 179, ../assets/sass/screen.scss */
+.purchase {
+  position: absolute;
+  bottom: 5px; }
+
+/* line 184, ../assets/sass/screen.scss */
 .book-image {
   float: left;
-  width: 120px;
-  height: 190px;
+  width: 90px;
+  height: 140px;
   margin-right: 10px;
   background-size: cover;
   background-position: center center;
